Port agent guide from CLAUDE.md to AGENTS.md (#1198)
#### Motivation:

AGENTS.md was a one-line stub that redirected every non-Claude agent to
CLAUDE.md. That file mixes durable project knowledge with
Claude-specific plumbing — output styles, context/cost monitors, MCP
steroid hooks, and the `_workflow/` lifecycle — so agents running on
other harnesses had to wade through instructions that do not apply to
them and could not follow (e.g., statusline files, `/config`,
SessionStart hooks).

This PR makes AGENTS.md self-contained: it now carries the tool-agnostic
project guide (project overview, build commands, architecture pointer,
code style, testing rules, git conventions, pre-commit verification,
codebase tips, documentation sync) ported from CLAUDE.md.
Claude-oriented and workflow-lifecycle sections were excluded, the
rebase conflict-resolution rule was adapted to reference AGENTS.md and
`docs/adr/**` instead of Claude-specific paths, and the stub link to
CLAUDE.md was removed. CLAUDE.md itself is unchanged.

No YTDB issue is associated with this change, so the title carries no
issue prefix.